# changelog-manager

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  codecov.yml  dangerfile.ts
.github/workflows/: ci.yml  create-release.yml  release.yml
src/: create.rs  entry.rs  fs_manager.rs  git_info.rs  lib.rs  main.rs  merge.rs  settings.rs  update.rs
tests/: create.rs
tests/common/: mod.rs
tests/integration/: create.rs  main.rs  merge.rs
tests/integration/common/: mod.rs
unreleased_changelogs/: dependabot-cargo-cargo-76ee54b543.json  feature-mm-6-add-available-update-message.json  feature-mm-first-implem.json  main.json
