[package]
name = "changelog-manager"
version = "0.1.1"
edition = "2021"
description = "A tool to manage changelogs"
homepage = "https://gitlab.ipleanware.com/Maxime.Morille/changelog-manager"
authors = ["Maxime Morille<maxime.morille@braincube.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.3.11", features = ["derive"] }
config = "0.14.1"
human-panic = "2.0.2"
pretty_assertions = "1.4.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
slug = "0.1.6"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
mockall = "0.13.0"
predicates = "3.1.2"
rstest = "0.23.0"
